fixed alignment on contact

--- a/assets/style/subfolder/contact.css
+++ b/assets/style/subfolder/contact.css
@@ -119,7 +119,7 @@ p {
     }
 
     section{
-        height: 100vh;
+        height: 120vh;
     }
     .section{
         display: flex;
